Fix: Fix search the game on db, and Fix the logic of Round Entity